.antlr/gcodeParser.py
# Generated from gcode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gcodeParser ( Parser ):

    grammarFileName = "gcode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "GCODE", "MCODE", "TCODE", "FCODE", "SCODE", 
                      "AXIS", "LETTER", "NUMBER", "DIGIT", "NEWLINE", "WHITESPACE", 
                      "COMMENT" ]

    RULE_program = 0
    RULE_line = 1
    RULE_command = 2
    RULE_parameter = 3

    ruleNames =  [ "program", "line", "command", "parameter" ]

    EOF = Token.EOF
    GCODE=1
    MCODE=2
    TCODE=3
    FCODE=4
    SCODE=5
    AXIS=6
    LETTER=7
    NUMBER=8
    DIGIT=9
    NEWLINE=10
    WHITESPACE=11
    COMMENT=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gcodeParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gcodeParser.LineContext)
            else:
                return self.getTypedRuleContext(gcodeParser.LineContext,i)


        def getRuleIndex(self):
            return gcodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = gcodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 8
                self.line()
                self.state = 11 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0)):
                    break

            self.state = 13
            self.match(gcodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(gcodeParser.CommandContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gcodeParser.ParameterContext)
            else:
                return self.getTypedRuleContext(gcodeParser.ParameterContext,i)


        def COMMENT(self):
            return self.getToken(gcodeParser.COMMENT, 0)

        def NEWLINE(self):
            return self.getToken(gcodeParser.NEWLINE, 0)

        def getRuleIndex(self):
            return gcodeParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = gcodeParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self.command()
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6 or _la==7:
                self.state = 16
                self.parameter()
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 22
                self.match(gcodeParser.COMMENT)


            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 25
                self.match(gcodeParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GCODE(self):
            return self.getToken(gcodeParser.GCODE, 0)

        def MCODE(self):
            return self.getToken(gcodeParser.MCODE, 0)

        def TCODE(self):
            return self.getToken(gcodeParser.TCODE, 0)

        def FCODE(self):
            return self.getToken(gcodeParser.FCODE, 0)

        def SCODE(self):
            return self.getToken(gcodeParser.SCODE, 0)

        def getRuleIndex(self):
            return gcodeParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = gcodeParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AXIS(self):
            return self.getToken(gcodeParser.AXIS, 0)

        def NUMBER(self):
            return self.getToken(gcodeParser.NUMBER, 0)

        def LETTER(self):
            return self.getToken(gcodeParser.LETTER, 0)

        def getRuleIndex(self):
            return gcodeParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = gcodeParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameter)
        try:
            self.state = 34
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.match(gcodeParser.AXIS)
                self.state = 31
                self.match(gcodeParser.NUMBER)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.match(gcodeParser.LETTER)
                self.state = 33
                self.match(gcodeParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





